# starlettelab

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  mypy.ini  pyproject.toml
.github/workflows/: build.yml  deploy.yml  release.yml  starlettelab.yml  test.yml
charts/starlettelab/: Chart.yaml  values.yaml
charts/starlettelab/templates/: deployment.yaml
starlettelab/: app.py  main.py  middleware.py  routes.py  settings.py
tests/: conftest.py  test_app.py  test_middleware.py  test_routes.py
