[tool.poetry]
name = "starlettelab"
version = "0.3.4"
description = "Playing with Starlette"
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
starlette = "^0.13.4"
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"
starlette-x-bugsnag = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
requests = "^2.23.0"
isort = "^4.3.21"
safety = "^1.9.0"
bump2version = "^1.0.0"
mypy = "^0.780"
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
